--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <kotlin.version>2.1.0</kotlin.version>
         <ktor.version>3.0.2</ktor.version>
         <khealth.version>3.0.1</khealth.version>
+        <ktorSwagger.version>4.1.0</ktorSwagger.version>
+        <swagger.version>2.2.21</swagger.version>
         <logback_version>1.5.12</logback_version>
         <slf4j.version>2.0.16</slf4j.version>
         <kotlinLogging.version>7.0.3</kotlinLogging.version>
@@ -67,6 +69,16 @@
             <groupId>io.ktor</groupId>
             <artifactId>ktor-server-netty-jvm</artifactId>
             <version>${ktor.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.smiley4</groupId>
+            <artifactId>ktor-swagger-ui</artifactId>
+            <version>${ktorSwagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
