add persistence for anagram history

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ out/
 ### Terraform ###
 **/src/**/.terraform/
 **/src/**/.terraform.lock.hcl
+
+### Docker local volume data ###
+docker/postgresql
